Add interests section

--- a/resume.tex
+++ b/resume.tex
@@ -91,7 +91,15 @@
             iOS \textbullet{}
             Android \textbullet{}
             MySQL
-        \sectionsep
+    \sectionsep
+
+    \section{Interests}
+        Cooking \textbullet{}
+        Particle Physics \textbullet{}
+        Fusion Engineering \textbullet{}
+        Music \textbullet{}
+        Private Spaceflight \textbullet{}
+    \sectionsep
 
 \end{minipage}
 \hfill
