Update to be more specific to my experience

--- a/resume.tex
+++ b/resume.tex
@@ -41,12 +41,14 @@
             College of Engineering \\
             Conc. in Electrical Engineering \\
             Conc. in Computer Science\\
+            John McMullen Dean Scholar\\
+            Goldfarb Cornell Tradition Fellow\\
     \sectionsep
 
     \section{Links}
-        Github:// \href{https://github.com/paulkiernan}{\textbf paulkiernan} \\
-        LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\textbf paulkiernan} \\
-        Twitter:// \href{https://twitter.com/gaelic}{\textbf @gaelic} \\
+        Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
+        LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\custombold{paulkiernan}}\\
+        Twitter:// \href{https://twitter.com/gaelic}{\custombold{@gaelic}}\\
     \sectionsep
 
     \section{Coursework}
@@ -95,10 +97,11 @@
 
     \section{Interests}
         Cooking \textbullet{}
-        Particle Physics \textbullet{}
+        Boxing \textbullet{}
+        Particle Physics \\
         Fusion Engineering \textbullet{}
         Music \textbullet{}
-        Private Spaceflight \textbullet{}
+        Aerospace Engineering
     \sectionsep
 
 \end{minipage}
@@ -109,61 +112,71 @@
     \section{Experience}
 
     \runsubsection{Moat}
-        \descript{| Software Developer}
+        \descript{|\hspace{1 mm} Software Developer}
         \location{May 2012 – Present | New York City, NY}
         \vspace{\topsep} % Hacky fix for awkward extra vertical space
         \begin{tightemize}
-            \item Worked on the YouTube Captions team in primarily vanilla
-                  Javascript and Python to plan, design and develop the full
-                  stack implementation of a new framework to add and edit
-                  Automatic Speech Recognition captions.
-            \item Created a backbone.js-like framework for the Captions editor.
-            \item All code was reviewed, perfected, and pushed to production.
+            \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
+            \item Build a real-time usage-reporting tool for the brand intelligence application.
+            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
         \end{tightemize}
     \sectionsep
 
-    \runsubsection{Phabricator}
-        \descript{| Open Source Contributor \& Team Leader}
-        \location{Jan 2013 – May 2013 | Palo Alto, CA \& Ithaca, NY}
+    \runsubsection{Cornell University}
+        \descript{|\hspace{1 mm} Linux Infrastructure Consultant}
+        \location{Jan 2009– May 2012 | Ithaca, NY}
         \begin{tightemize}
-            \item Phabricator is used daily by Facebook, Dropbox, Quora, Asana and more.
-            \item I created the Meme generator, the entire Lipsum application, ported Tokens to different apps, fixed many bugs and more in PHP and Shell.
-            \item Led a team from MIT, Cornell, IC London and UHelsinki for the project.
+            \item Lead undergrad consultant at the Laboratory for
+                  Elementary-Particle Physics.
+            \item Designed, installed, and serviced solutions for a network of
+                  high-performance computational nodes used in the study of
+                  beams and accelerators, photon science, and particle physics.
+            \item Managed a complex network of heterogeneous Linux nodes
+                  responsible for serving the department’s administrative
+                  tasks.
         \end{tightemize}
     \sectionsep
 
     \section{Research}
         \runsubsection{Cornell Robot Learning Lab}
-            \descript{| Head Undergrad Research}
-            \location{Jan 2014 – Present | Ithaca, NY}
-            Worked with \textbf{\href{http://www.cs.cornell.edu/~ashesh/}{Ashesh Jain}} and \textbf{\href{http://www.cs.cornell.edu/~asaxena/}{Prof Ashutosh Saxena}} to create \textbf{PlanIt}, a tool which  learns from large scale user preference feedback to plan robot trajectories in human environments.  Publication submitted.
+            \descript{|\hspace{1 mm} Undergraduate Researcher}
+            \location{Jan 2011 – Mar 2011 | Ithaca, NY}
+            Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
+            Prof. Ashutosh Saxena}} to create a supervised learning algorithm
+            for finding good object placements using point-clouds of an object
+            and its surrounding area. Implemented the algorithm on an Adept
+            Viper s850 robotic arm equipped with a Microsoft Kinect. SVM models
+            built from our training examples attained performances in excess of
+            80\% for both precision and recall on both flat and non-flat
+            surface placement.
+            \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
         \sectionsep
 
-        \runsubsection{Cornell Phonetics Lab}
-            \descript{| Head Undergraduate Researcher}
-            \location{Mar 2012 – May 2013 | Ithaca, NY}
-            Lead the development of \textbf{QuickTongue}, the first ever breakthrough tongue-controlled game with \textbf{\href{http://conf.ling.cornell.edu/~tilsen/}{Prof Sam Tilsen}} to aid in Linguistics research. Publication submitted.
+        \runsubsection{Cornell Space Systems Design Studio}
+            \descript{|\hspace{1 mm} Power Subteam}
+            \location{May 2010 – Dec 2010 | Ithaca, NY}
+            Designed and fabricated the ATxmega128 based power distribution
+            system for Cornell’s operationally responsive, high agility space
+            imaging system codenamed 'Violet'.
     \sectionsep
 
     \section{Awards}
         \begin{tabular}{rll}
-            2014     & top 52/2500  & KPCB Engineering Fellow\\
-            2014     & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
-            2014     & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
-            2013     & National  & Jump Trading Challenge Finalist\\
-            2013     & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
-            2012     & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-            2011     & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-            2010     & National & Comp. Soc. of India's National Programming Contest\\
+            2014 & top 52/2500  & KPCB Engineering Fellow\\
+            2014 & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
+            2014 & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
+            2013 & National  & Jump Trading Challenge Finalist\\
+            2013 & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
+            2012 & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
+            2011 & National & Indian National Mathematics Olympiad (INMO) Finalist \\
         \end{tabular}
     \sectionsep
 
     \section{Societies} 
         \begin{tabular}{rll}
-            2014 	& top 12\%ile    & Tau Beta Pi Engineering Honor Society\\
-            2014   & National   & The Global Leadership and Education Forum (tGELF)\\
-            2012   &  National  & Golden Key International Honor Society\\
-            2012   &  National   & National Society of Collegiate Scholars\\
+            2014 & top 12\%ile & Tau Beta Pi Engineering Honor Society\\
+            2014 & National    & The Global Leadership and Education Forum (tGELF)\\
+            2012 & National    & Golden Key International Honor Society\\
         \end{tabular}
     \sectionsep
 
