Add link to moat.com

--- a/resume.tex
+++ b/resume.tex
@@ -111,7 +111,7 @@
 
     \section{Experience}
 
-    \runsubsection{Moat}
+    \runsubsection{\href{http://www.moat.com/}{Moat}}
         \descript{|\hspace{1 mm} Software Developer}
         \location{May 2012 – Present | New York City, NY}
         \vspace{\topsep} % Hacky fix for awkward extra vertical space
