Remove irrelevant sections and fill up some space with lipsum

--- a/resume.tex
+++ b/resume.tex
@@ -119,6 +119,13 @@
             \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
             \item Build a real-time usage-reporting tool for the brand intelligence application.
             \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
+            \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
+            \item Build a real-time usage-reporting tool for the brand intelligence application.
+            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
+            \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
+            \item Build a real-time usage-reporting tool for the brand intelligence application.
+            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
+            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities 
         \end{tightemize}
     \sectionsep
 
@@ -160,25 +167,25 @@
             imaging system codenamed 'Violet'.
     \sectionsep
 
-    \section{Awards}
-        \begin{tabular}{rll}
-            2014 & top 52/2500  & KPCB Engineering Fellow\\
-            2014 & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
-            2014 & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
-            2013 & National  & Jump Trading Challenge Finalist\\
-            2013 & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
-            2012 & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-            2011 & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-        \end{tabular}
-    \sectionsep
+    %\section{Awards}
+        %\begin{tabular}{rll}
+            %2014 & top 52/2500  & KPCB Engineering Fellow\\
+            %2014 & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
+            %2014 & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
+            %2013 & National  & Jump Trading Challenge Finalist\\
+            %2013 & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
+            %2012 & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
+            %2011 & National & Indian National Mathematics Olympiad (INMO) Finalist \\
+        %\end{tabular}
+    %\sectionsep
 
-    \section{Societies} 
-        \begin{tabular}{rll}
-            2014 & top 12\%ile & Tau Beta Pi Engineering Honor Society\\
-            2014 & National    & The Global Leadership and Education Forum (tGELF)\\
-            2012 & National    & Golden Key International Honor Society\\
-        \end{tabular}
-    \sectionsep
+    %\section{Societies} 
+        %\begin{tabular}{rll}
+            %2014 & top 12\%ile & Tau Beta Pi Engineering Honor Society\\
+            %2014 & National    & The Global Leadership and Education Forum (tGELF)\\
+            %2012 & National    & Golden Key International Honor Society\\
+        %\end{tabular}
+    %\sectionsep
 
 \end{minipage}
 \end{document}
