--- a/resume.tex
+++ b/resume.tex
@@ -19,6 +19,7 @@
 % line on which the font is used and either change it to a font included with
 % your operating system or comment the line out to use the default font.
 
+\RequirePackage{fix-cm}
 \RequirePackage[l2tabu, orthodox]{nag}
 \documentclass[]{deedy-resume-openfont}
 \usepackage{microtype}
@@ -73,26 +74,22 @@
 
     \section{Skills}
         \subsection{Programming}
+        \location{Over 60,000 lines:}
+            Python \\
         \location{Over 5000 lines:}
             Java \textbullet{}
             Shell \textbullet{}
-            JavaScript \textbullet{}
-            Matlab \\
-            OCaml \textbullet{}
-            Python \textbullet{}
-            Rails \textbullet{}
+            Matlab \textbullet{}
             \LaTeX\ \\
         \location{Over 1000 lines:}
+            MySQL \textbullet{}
             C \textbullet{}
             C++ \textbullet{}
-            CSS \textbullet{}
-            PHP \textbullet{}
             Assembly \\
         \location{Familiar:}
-            AS3 \textbullet{}
-            iOS \textbullet{}
-            Android \textbullet{}
-            MySQL
+            JavaScript \textbullet{}
+            CSS \textbullet{}
+            PHP \\
     \sectionsep
 
     \section{Interests}
@@ -116,16 +113,48 @@
         \location{May 2012 – Present | New York City, NY}
         \vspace{\topsep} % Hacky fix for awkward extra vertical space
         \begin{tightemize}
-            \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
-            \item Build a real-time usage-reporting tool for the brand intelligence application.
-            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
-            \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
-            \item Build a real-time usage-reporting tool for the brand intelligence application.
-            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
-            \item Develop the full-stack web application for Moat’s enterprise-level brand advertisement search engine.
-            \item Build a real-time usage-reporting tool for the brand intelligence application.
-            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities (i.e.- most recently: the inclusion of rich-media advertisements alongside more traditional formats such as the Standard IAB). 
-            \item Design a heterogeneous network of web crawlers capable of detecting, capturing, and indexing online advertisements. Incrementally extend indexer web reach and capabilities 
+            \item
+                Developed the full-stack behind Moat Pro, an enterprise
+                ad-intelligence platform that allows markets to research trends
+                in the online advertising industry.
+            \item
+                Developed network of web crawlers (Moatbots) capable of
+                programmatically detecting, capturing, and indexing online
+                advertisements.
+            \item
+                Extended Moatbots to index rich-media advertisements in
+                addition to traditional Standard IAB formats.
+            \item
+                Extended Moatbots to include regional indexing capabilities,
+                e.g.- develop a representation of the UK ad landscape by
+                proxying traffic through UK servers.
+            \item
+                Developed ETL for consuming warehoused Moatbot data and
+                transforming it into an optimized, queryable form.
+            \item
+                Refactored ETL to aggregate indexed results across regions.
+            \item
+                Developed API to cache architecture for client side report
+                generation.
+            \item
+                Developed Pyramid web application that used the client API to
+                serve reports.
+            \item
+                Developed autocomplete service for web application that served
+                as the primary means of directing site traffic.
+            \item
+                Developed Pyramid middleware for logging user engagement with
+                the client-facing brand intelligence tool.
+            \item
+                Developed homebrew real-time analytics tool that consumed
+                engagement data to build reports on site usage patterns and
+                behaviour.
+            \item
+                Deployed a Jenkins continuous integration server for
+                regression testing.
+            \item
+                Developed homebrew heterogeneous server role and configuration
+                deployment system in Amazon’s EC2.
         \end{tightemize}
     \sectionsep
 
@@ -133,14 +162,16 @@
         \descript{|\hspace{1 mm} Linux Infrastructure Consultant}
         \location{Jan 2009– May 2012 | Ithaca, NY}
         \begin{tightemize}
-            \item Lead undergrad consultant at the Laboratory for
-                  Elementary-Particle Physics.
-            \item Designed, installed, and serviced solutions for a network of
-                  high-performance computational nodes used in the study of
-                  beams and accelerators, photon science, and particle physics.
-            \item Managed a complex network of heterogeneous Linux nodes
-                  responsible for serving the department’s administrative
-                  tasks.
+            \item
+                Lead undergrad consultant at the Laboratory for Elementary-
+                Particle Physics.
+            \item
+                Designed, installed, and serviced solutions for a network of
+                high-performance computational nodes used in the study of beams
+                and accelerators, photon science, and particle physics.
+            \item
+                Managed a complex network of heterogeneous Linux nodes
+                responsible for serving the department’s administrative tasks.
         \end{tightemize}
     \sectionsep
 
@@ -148,23 +179,23 @@
         \runsubsection{Cornell Robot Learning Lab}
             \descript{|\hspace{1 mm} Undergraduate Researcher}
             \location{Jan 2011 – Mar 2011 | Ithaca, NY}
-            Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
-            Prof. Ashutosh Saxena}} to create a supervised learning algorithm
-            for finding good object placements using point-clouds of an object
-            and its surrounding area. Implemented the algorithm on an Adept
-            Viper s850 robotic arm equipped with a Microsoft Kinect. SVM models
-            built from our training examples attained performances in excess of
-            80\% for both precision and recall on both flat and non-flat
-            surface placement.
-            \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
+                Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
+                Prof. Ashutosh Saxena}} to create a supervised learning algorithm
+                for finding good object placements using point-clouds of an object
+                and its surrounding area. Implemented the algorithm on an Adept
+                Viper s850 robotic arm equipped with a Microsoft Kinect. SVM models
+                built from our training examples attained performances in excess of
+                80\% for both precision and recall on both flat and non-flat
+                surface placement.
+                \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
         \sectionsep
 
         \runsubsection{Cornell Space Systems Design Studio}
             \descript{|\hspace{1 mm} Power Subteam}
             \location{May 2010 – Dec 2010 | Ithaca, NY}
-            Designed and fabricated the ATxmega128 based power distribution
-            system for Cornell’s operationally responsive, high agility space
-            imaging system codenamed 'Violet'.
+                Designed and fabricated the ATxmega128 based power distribution
+                system for Cornell’s operationally responsive, high agility
+                space imaging system codenamed 'Violet'.
     \sectionsep
 
     %\section{Awards}
