--- a/resume.tex
+++ b/resume.tex
@@ -97,7 +97,7 @@
         Boxing \textbullet{}
         Particle Physics \\
         Fusion Engineering \textbullet{}
-        Music \textbullet{}
+        Music \\
         Aerospace Engineering
     \sectionsep
 
@@ -132,7 +132,8 @@
                 Developed ETL for consuming warehoused Moatbot data and
                 transforming it into an optimized, queryable form.
             \item
-                Refactored ETL to aggregate indexed results across regions.
+                Refactored ETL to aggregate indexed results across different
+                regions.
             \item
                 Developed API to cache architecture for client side report
                 generation.
@@ -146,7 +147,7 @@
                 Developed Pyramid middleware for logging user engagement with
                 the client-facing brand intelligence tool.
             \item
-                Developed homebrew real-time analytics tool that consumed
+                Developed homebrew real-time analytics tool for consuming
                 engagement data to build reports on site usage patterns and
                 behaviour.
             \item
