Updates after Saras recommendations

--- a/resume.tex
+++ b/resume.tex
@@ -33,191 +33,138 @@
     \href{mailto:pak79@cornell.edu}{pak79@cornell.edu} | 646.369.6726
 }
 
-\begin{minipage}[t]{0.33\textwidth}
+\section{Education}
+    \runsubsection{Cornell University}
+        \location{\hfill May 2012}
+        \descript{BS in Electrical and Computer Engineering}
+        \hspace{22pt} Double Concentration in Electrical Engineering and Computer Science \\
+        \hspace{22pt} Honors: John McMullen Dean Scholar, Goldfarb Tradition Fellow \\
+\sectionsep
 
-    \section{Education}
-        \subsection{Cornell University}
-            \descript{BS in Electrical and Computer Engineering}
-            \location{May 2012 | Ithaca, NY}
-            College of Engineering \\
-            Conc. in Electrical Engineering \\
-            Conc. in Computer Science\\
-            John McMullen Dean Scholar\\
-            Goldfarb Cornell Tradition Fellow\\
+\section{Experience}
+
+\runsubsection{\href{http://www.moat.com/}{Moat}}
+    \location{\hfill May 2012 – Present}
+    \descript{Software Developer}
+    \begin{tightemize}
+        \item
+            Developed the full-stack behind Moat Pro, an enterprise
+            ad-intelligence platform that allows markets to research trends
+            in the online advertising industry.
+        \item
+            Developed network of autonomous web crawlers (Moatbots) capable
+            of programmatically detecting, capturing, and indexing online
+            advertisements.
+        %\item
+            %Extended Moatbots to index rich-media advertisements in
+            %addition to traditional Standard IAB formats.
+        %\item
+            %Extended Moatbots to include regional indexing capabilities,
+            %e.g.- develop a representation of the UK ad landscape by
+            %proxying traffic through UK servers.
+        \item
+            Developed ETL for consuming warehoused Moatbot data and
+            transforming it into an optimized, queryable form.
+        %\item
+            %Refactored ETL to aggregate indexed results across different
+            %regions.
+        \item
+            Developed API to cache architecture for client side report
+            generation and Pyramid application to serve reports.
+        \item
+            Developed autocomplete service for web application that served
+            as the primary means of directing site traffic.
+        \item
+            Developed Pyramid middleware for logging user engagement with
+            the client-facing brand intelligence tool.
+        \item
+            Developed homebrew real-time analytics tool for consuming
+            engagement data to build reports on site usage patterns and
+            behaviour.
+        \item
+            Deployed a Jenkins continuous integration server for
+            regression testing.
+        \item
+            Developed homebrew heterogeneous server role and configuration
+            deployment system in Amazon’s EC2.
+    \end{tightemize}
+\sectionsep
+
+\runsubsection{Cornell University}
+    \location{\hfill Jan 2009– May 2012}
+    \descript{Linux Infrastructure Consultant}
+    \begin{tightemize}
+        \item
+            Lead undergrad consultant at the Laboratory for Elementary-
+            Particle Physics.
+        \item
+            Designed, installed, and serviced solutions for a network of
+            high-performance computational nodes used in the study of beams
+            and accelerators, photon science, and particle physics.
+        \item
+            Managed a complex network of heterogeneous Linux nodes
+            responsible for serving the department’s administrative tasks.
+    \end{tightemize}
+\sectionsep
+
+\section{Research}
+    \runsubsection{Cornell Robot Learning Lab}
+        \location{\hfill Jan 2011 – Mar 2011}
+        \descript{Undergraduate Researcher}
+            Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
+            Prof. Ashutosh Saxena}} to create a supervised learning algorithm
+            for finding good object placements using point-clouds of an object
+            and its surrounding area. Implemented the algorithm on an Adept
+            Viper s850 robotic arm equipped with a Microsoft Kinect. SVM models
+            built from our training examples attained performances in excess of
+            80\% for both precision and recall on both flat and non-flat
+            surface placement.
+            \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
     \sectionsep
 
-    \section{Links}
-        Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
-        LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\custombold{paulkiernan}}\\
-        Twitter:// \href{https://twitter.com/gaelic}{\custombold{@gaelic}}\\
+    \runsubsection{Cornell Space Systems Design Studio}
+        \location{\hfill May 2010 – Dec 2010}
+        \descript{Power Subteam Member}
+            Designed and fabricated the ATxmega128 based power distribution
+            system for Cornell’s operationally responsive, high agility
+            space imaging system codenamed 'Violet'.
     \sectionsep
 
-    \section{Coursework}
-        Robot Learning\\
-        Operating Systems \\
-        Open Source Software Engineering \\
-        Unix Tools and Scripting \\
-        C ++ Programming\\
-        Computer Architecture\\
-        Digital Systems Design Using Microcontrollers\\
-        Microelectronics\\
-        Embedded Systems\\
-        Computerized Instrumentation Design\\
-        Digital Logic Design\\
-        Discrete Structures\\
-        Signals \& Systems\\
-        Probability and Inference\\
-        Lasers and Optoelectronics\\
-        Controlled Fusion\\
-        %{\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
-    \sectionsep
-
-    \section{Skills}
-        \subsection{Programming}
-        \location{Over 60,000 lines:}
-            Python \\
-        \location{Over 5000 lines:}
-            Java \textbullet{}
-            Shell \textbullet{}
-            Matlab \textbullet{}
-            \LaTeX\ \\
-        \location{Over 1000 lines:}
-            MySQL \textbullet{}
-            C \textbullet{}
-            C++ \textbullet{}
-            Assembly \\
-        \location{Familiar:}
-            JavaScript \textbullet{}
-            CSS \textbullet{}
-            PHP \\
-    \sectionsep
-
+\begin{minipage}[t]{0.37\textwidth}
+    \section{Programming Skills}
+    \meow{Over 60,000 lines:}
+        Python \\
+    \meow{Over 5000 lines:}
+        Java \textbullet{}
+        Shell \textbullet{}
+        Matlab \textbullet{}
+        \LaTeX\ \\
+    \meow{Over 1000 lines:}
+        MySQL \textbullet{}
+        C \textbullet{}
+        C++ \textbullet{}
+        Assembly \\
+    \meow{Familiar:}
+        JavaScript \textbullet{}
+        CSS \textbullet{}
+        PHP \\
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.32\textwidth}
     \section{Interests}
         Cooking \textbullet{}
         Boxing \textbullet{}
         Particle Physics \\
         Fusion Engineering \textbullet{}
         Music \\
-        Aerospace Engineering
-    \sectionsep
-
+        Aerospace Engineering \\
+        Miyazaki Films
 \end{minipage}
 \hfill
-% COLUMN TWO
-\begin{minipage}[t]{0.66\textwidth} 
-
-    \section{Experience}
-
-    \runsubsection{\href{http://www.moat.com/}{Moat}}
-        \descript{|\hspace{1 mm} Software Developer}
-        \location{May 2012 – Present | New York City, NY}
-        \vspace{\topsep} % Hacky fix for awkward extra vertical space
-        \begin{tightemize}
-            \item
-                Developed the full-stack behind Moat Pro, an enterprise
-                ad-intelligence platform that allows markets to research trends
-                in the online advertising industry.
-            \item
-                Developed network of web crawlers (Moatbots) capable of
-                programmatically detecting, capturing, and indexing online
-                advertisements.
-            \item
-                Extended Moatbots to index rich-media advertisements in
-                addition to traditional Standard IAB formats.
-            \item
-                Extended Moatbots to include regional indexing capabilities,
-                e.g.- develop a representation of the UK ad landscape by
-                proxying traffic through UK servers.
-            \item
-                Developed ETL for consuming warehoused Moatbot data and
-                transforming it into an optimized, queryable form.
-            \item
-                Refactored ETL to aggregate indexed results across different
-                regions.
-            \item
-                Developed API to cache architecture for client side report
-                generation.
-            \item
-                Developed Pyramid web application that used the client API to
-                serve reports.
-            \item
-                Developed autocomplete service for web application that served
-                as the primary means of directing site traffic.
-            \item
-                Developed Pyramid middleware for logging user engagement with
-                the client-facing brand intelligence tool.
-            \item
-                Developed homebrew real-time analytics tool for consuming
-                engagement data to build reports on site usage patterns and
-                behaviour.
-            \item
-                Deployed a Jenkins continuous integration server for
-                regression testing.
-            \item
-                Developed homebrew heterogeneous server role and configuration
-                deployment system in Amazon’s EC2.
-        \end{tightemize}
-    \sectionsep
-
-    \runsubsection{Cornell University}
-        \descript{|\hspace{1 mm} Linux Infrastructure Consultant}
-        \location{Jan 2009– May 2012 | Ithaca, NY}
-        \begin{tightemize}
-            \item
-                Lead undergrad consultant at the Laboratory for Elementary-
-                Particle Physics.
-            \item
-                Designed, installed, and serviced solutions for a network of
-                high-performance computational nodes used in the study of beams
-                and accelerators, photon science, and particle physics.
-            \item
-                Managed a complex network of heterogeneous Linux nodes
-                responsible for serving the department’s administrative tasks.
-        \end{tightemize}
-    \sectionsep
-
-    \section{Research}
-        \runsubsection{Cornell Robot Learning Lab}
-            \descript{|\hspace{1 mm} Undergraduate Researcher}
-            \location{Jan 2011 – Mar 2011 | Ithaca, NY}
-                Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
-                Prof. Ashutosh Saxena}} to create a supervised learning algorithm
-                for finding good object placements using point-clouds of an object
-                and its surrounding area. Implemented the algorithm on an Adept
-                Viper s850 robotic arm equipped with a Microsoft Kinect. SVM models
-                built from our training examples attained performances in excess of
-                80\% for both precision and recall on both flat and non-flat
-                surface placement.
-                \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
-        \sectionsep
-
-        \runsubsection{Cornell Space Systems Design Studio}
-            \descript{|\hspace{1 mm} Power Subteam}
-            \location{May 2010 – Dec 2010 | Ithaca, NY}
-                Designed and fabricated the ATxmega128 based power distribution
-                system for Cornell’s operationally responsive, high agility
-                space imaging system codenamed 'Violet'.
-    \sectionsep
-
-    %\section{Awards}
-        %\begin{tabular}{rll}
-            %2014 & top 52/2500  & KPCB Engineering Fellow\\
-            %2014 & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
-            %2014 & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
-            %2013 & National  & Jump Trading Challenge Finalist\\
-            %2013 & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
-            %2012 & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-            %2011 & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-        %\end{tabular}
-    %\sectionsep
-
-    %\section{Societies} 
-        %\begin{tabular}{rll}
-            %2014 & top 12\%ile & Tau Beta Pi Engineering Honor Society\\
-            %2014 & National    & The Global Leadership and Education Forum (tGELF)\\
-            %2012 & National    & Golden Key International Honor Society\\
-        %\end{tabular}
-    %\sectionsep
-
+\begin{minipage}[t]{0.30\textwidth}
+    \section{Links}
+        Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
+        LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\custombold{paulkiernan}}\\
+        Twitter:// \href{https://twitter.com/gaelic}{\custombold{@gaelic}}\\
 \end{minipage}
 \end{document}
