--- a/deedy-resume-openfont.cls
+++ b/deedy-resume-openfont.cls
@@ -81,10 +81,32 @@
 
 % Descriptors command
 \newcommand{\descript}[1]{
-    \color{subheadings}\raggedright\scshape\fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{11pt}{13pt}\selectfont {#1 \\} \normalfont}
+    \color{subheadings}
+    \raggedright
+    \scshape
+    \fontspec[Path = fonts/raleway/]{Raleway-Medium}
+    \fontsize{11pt}{13pt}
+    \selectfont {#1 \\}
+    \normalfont
+}
 
 % Location command
-\newcommand{\location}[1]{\color{headings}\raggedright\fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{10pt}{12pt}\selectfont {#1\\} \normalfont}
+\newcommand{\location}[1]{
+    \color{headings}
+    \raggedright
+    \fontspec[Path = fonts/raleway/]{Raleway-Medium}
+    \fontsize{10pt}{12pt}
+    \selectfont {#1 \\}
+    \normalfont
+}
+\newcommand{\meow}[1]{
+    \color{headings}
+    \raggedright
+    \fontspec[Path = fonts/raleway/]{Raleway-Medium}
+    \fontsize{9pt}{12pt}
+    \selectfont {#1}
+    \normalfont
+}
 
 % Section seperators command
 \newcommand{\sectionsep}[0]{\vspace{8pt}}
