Update research to be buillited, condense LEPP

--- a/resume.tex
+++ b/resume.tex
@@ -90,20 +90,17 @@
     \end{tightemize}
 \sectionsep
 
-\runsubsection{Cornell University}
+\runsubsection{Cornell Laboratory for Elementary-Particle Physics}
     \location{\hfill Jan 2009– May 2012}
-    \descript{Linux Infrastructure Consultant}
+    \descript{Lead Linux Infrastructure Consultant}
     \begin{tightemize}
-        \item
-            Lead undergrad consultant at the Laboratory for Elementary-
-            Particle Physics.
         \item
             Designed, installed, and serviced solutions for a network of
             high-performance computational nodes used in the study of beams
             and accelerators, photon science, and particle physics.
         \item
-            Managed a complex network of heterogeneous Linux nodes
-            responsible for serving the department’s administrative tasks.
+            Managed a network of Linux nodes responsible for serving the
+            department’s administrative tasks.
     \end{tightemize}
 \sectionsep
 
@@ -111,28 +108,38 @@
     \runsubsection{Cornell Robot Learning Lab}
         \location{\hfill Jan 2011 – Mar 2011}
         \descript{Undergraduate Researcher}
-            Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
-            Prof. Ashutosh Saxena}} to create a supervised learning algorithm
-            for finding good object placements using point-clouds of an object
-            and its surrounding area. Implemented the algorithm on an Adept
-            Viper s850 robotic arm equipped with a Microsoft Kinect. SVM models
-            built from our training examples attained performances in excess of
-            80\% for both precision and recall on both flat and non-flat
-            surface placement.
-            \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
+            \begin{tightemize}
+                \item
+                    Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
+                    Prof. Ashutosh Saxena}} to create a supervised learning algorithm
+                    for finding good object placements using point-clouds of an object
+                    and its surrounding area.
+                \item
+                    Implemented the algorithm on an Adept
+                    Viper s850 robotic arm equipped with a Microsoft Kinect.
+                \item
+                    SVM models
+                    built from our training examples attained performances in excess of
+                    80\% for both precision and recall on both flat and non-flat
+                    surface placement.
+                    \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
+            \end{tightemize}
     \sectionsep
 
     \runsubsection{Cornell Space Systems Design Studio}
         \location{\hfill May 2010 – Dec 2010}
         \descript{Power Subteam Member}
-            Designed and fabricated the ATxmega128 based power distribution
-            system for Cornell’s operationally responsive, high agility
-            space imaging system codenamed 'Violet'.
+            \begin{tightemize}
+                \item
+                    Designed and fabricated the ATxmega128 based power distribution
+                    system for Cornell’s operationally responsive, high agility
+                    space imaging system codenamed 'Violet'.
+            \end{tightemize}
     \sectionsep
 
-\begin{minipage}[t]{0.37\textwidth}
+\begin{minipage}[t]{0.42\textwidth}
     \section{Programming Skills}
-    \meow{Over 60,000 lines:}
+    \custombold{\meow{Over 60,000 lines:}}
         Python \\
     \meow{Over 5000 lines:}
         Java \textbullet{}
@@ -150,18 +157,18 @@
         PHP \\
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.32\textwidth}
+\begin{minipage}[t]{0.35\textwidth}
     \section{Interests}
         Cooking \textbullet{}
         Boxing \textbullet{}
         Particle Physics \\
         Fusion Engineering \textbullet{}
-        Music \\
-        Aerospace Engineering \\
-        Miyazaki Films
+        Miyazaki Films \\
+        Aerospace Engineering \textbullet{}
+        Music 
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.30\textwidth}
+\begin{minipage}[t]{0.22\textwidth}
     \section{Links}
         Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
         LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\custombold{paulkiernan}}\\
